--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(untitled2)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(untitled2
-        zadanie1.cpp
-        )
+        zadanie2.cpp
+        zadanie2.h
+)
